# Calc

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  evaluator.cpp  evaluator.h  inf_for_calc.cpp  inf_for_calc.h  main.cpp  parser.cpp  parser.h  validator.cpp  validator.h
lab1/: CMakeLists.txt  README.md  calculator.cpp  calculator.h  evaluator.cpp  evaluator.h  inf_for_calc.cpp  inf_for_calc.h  main.cpp  operator.h  parser.cpp  parser.h  validator.cpp  validator.h
lab1/plugins/: DLL_1.cpp  DLL_2.cpp
lab2/: CMakeLists.txt  example.xml  iterator.cpp  iterator.h  main.cpp  node.cpp  node.h  node_iter.cpp  node_iter.h  xml_file.cpp  xml_file.h  xml_resource.cpp  xml_resource.h
lab3/: CMakeLists.txt  Engine.h  Subject.h  Wrapper.h  lab3.cpp  main.cpp
plugins/: DLL_1.cpp
